# src/dtos/store.dto.js
@@ -7,3 +7,8 @@ export const addstoreResponseDTO = (store) => {
 export const addreviewResponseDTO = (review) => {
   return { body: review[0].body, score: review[0].score };
 };
+
+// add mission response DTO
+export const addmissionResponseDTO = (mission) => {
+  return { reward: mission[0].reward, deadline: mission[0].deadline, mission_spec: mission[0].mission_spec };
+};
