# swagger/store.swagger.yaml
@@ -163,3 +163,87 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+  /store/addMission:
+    post:
+      tags:
+        - Store-Mission
+      summary: 가게 미션 추가
+      parameters:
+        - name: addReview
+          in: body
+          required: true
+          schema:
+            properties:
+              store_id:
+                type: integer
+                description: 가게 번호
+                example: 1
+              reward:
+                type: integer
+                description: 미션 보상
+                example: 500
+              deadline:
+                type: datetime
+                description: 미션 마감 기한
+                example: 2099-01-01 00:00:00
+              mission_spec:
+                type: string
+                description: 미션 내용
+                example: 12,000원 이상의 식사를 하세요!
+      responses:
+        "200":
+          description: 미션 추가 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: { "reward": 500, "deadline": 2099-01-01 00:00:00, "mission_spec": "mission content" }
+
+        "400":
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        "500":
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
